# fenrix

./: .gitignore  Cargo.toml  README.md
crates/fenrix-cli/: Cargo.toml
crates/fenrix-cli/src/: main.rs
crates/fenrix-cli/templates/: Cargo.toml.template  index.html.template
crates/fenrix-cli/templates/src/: lib.rs.template
crates/fenrix-core/: Cargo.toml
crates/fenrix-core/src/: lib.rs
crates/fenrix-core/tests/: signals.rs
crates/fenrix-dom/: Cargo.toml
crates/fenrix-dom/src/: lib.rs
crates/fenrix-macros/: Cargo.toml
crates/fenrix-macros/src/: lib.rs  server.rs
crates/fenrix-router/: Cargo.toml
crates/fenrix-router/src/: lib.rs
crates/fenrix-server/: Cargo.toml
crates/fenrix-server/src/: lib.rs
docs/: fenrix_architecture_specification.md  fenrix_flying_higher.md  server_architecture.md
docs/book/en/: SUMMARY.md  introduction.md
docs/book/en/api-reference/: fenrix-core.md
docs/book/en/core-concepts/: components.md  dependency-injection.md  reactivity.md  routing.md  server-functions.md  templating-with-rsx.md
docs/book/en/getting-started/: index.md  installation.md  your-first-app.md
docs/book/en/tutorials/todo-list/: 01-setup-and-components.md  02-adding-todos.md  03-completing-todos.md  04-deleting-todos.md  index.md
docs/collateral/: base_blog_post.md  fenrix_forward.md  fenrix_v_angular_analysis.md  launch_announcement.md  technical_article.md
docs/contibuting/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/outreach/: 01_hacker_news.md  02_reddit_rust.md  03_lobsters.md  04_this_week_in_rust.md  05_are_we_web_yet.md  06_dev_to.md  07_the_new_stack.md  08_logrocket_blog.md  09_smashing_magazine.md  10_reddit_programming.md  outreach_targets.md
examples/data-binding/: Cargo.toml  index.html
examples/data-binding/src/: lib.rs
examples/di-example/: Cargo.toml  index.html
examples/di-example/src/: lib.rs
examples/hello-world/: Cargo.toml  index.html
examples/hello-world/src/: lib.rs
examples/routing-example/: Cargo.toml  index.html
examples/routing-example/src/: lib.rs
examples/server-function-example/: Cargo.toml  index.html
examples/server-function-example/src/: lib.rs  main.rs
examples/simple-component/: Cargo.toml  index.html
examples/simple-component/src/: lib.rs
scripts/: build_system.sh  run_system_test.sh  verify_data-binding.py  verify_di-example.py  verify_hello-world.py  verify_routing-example.py  verify_server-function-example.py  verify_simple-component.py
