[package]
name = "fenrix-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command Line Interface for Ferix: A modern Rust UI framework for building fast, reliable, and beautiful web apps."

[[bin]]
name = "cargo-fenrix"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0"
fs_extra = "1.3.0"
walkdir = "2.3.3"