[package]
name = "fenrix-dom"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Server-side runner for the Fenrix framework, handling API endpoints and static file serving."

[dependencies]
fenrix-core = { path = "../../crates/fenrix-core", version = "0.1.0"  }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
]}