[package]
name = "fenrix-macros"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Macros for Ferix: A modern Rust UI framework for building fast, reliable, and beautiful web apps."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"