[package]
name = "fenrix-router"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Router for Ferix: A modern Rust UI framework for building fast, reliable, and beautiful web apps."

[dependencies]
fenrix-core = { path = "../../crates/fenrix-core", version = "0.1.0"  }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Location",
    "Window",
    "HashChangeEvent",
    "Event",
    "EventTarget",
    "Node",
]}