[package]
name = "routing-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
fenrix-core = { path = "../../crates/fenrix-core", version = "0.1.0"  }
fenrix-dom = { path = "../../crates/fenrix-dom", version = "0.1.0"  }
fenrix-macros = { path = "../../crates/fenrix-macros", version = "0.1.0"  }
fenrix-router = { path = "../../crates/fenrix-router", version = "0.1.0"  }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Node",
    "MouseEvent",
]}