[package]
name = "routing-example"
version = "0.1.0"
authors = ["Giri Venkat"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fenrix-core = { path = "../../crates/fenrix-core" }
fenrix-dom = { path = "../../crates/fenrix-dom" }
fenrix-macros = { path = "../../crates/fenrix-macros" }
fenrix-router = { path = "../../crates/fenrix-router" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Node",
    "MouseEvent",
    "console",
]}