[package]
name = "server-function-example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
fenrix-core = { path = "../../crates/fenrix-core", version = "0.1.0"  }
fenrix-dom = { path = "../../crates/fenrix-dom", version = "0.1.0"  }
fenrix-macros = { path = "../../crates/fenrix-macros", version = "0.1.0"  }

# Dependencies for wasm client
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
    "Element",
    "Node",
    "Location"
]}

# Dependencies for serialization (used by both client and server)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"