[package]
name = "server-function-example"
version = "0.1.0"
authors = ["Giri Venkat"]
edition = "2021"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "server-function-example-server"
path = "src/main.rs"
required-features = ["server"]

[dependencies]
# Shared
fenrix-core = { path = "../../crates/fenrix-core" }
fenrix-dom = { path = "../../crates/fenrix-dom" }
fenrix-macros = { path = "../../crates/fenrix-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Client-side
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
    "Element",
    "Node",
    "Location"
]}

# Server-side
fenrix-server = { path = "../../crates/fenrix-server", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
server = ["dep:fenrix-server", "dep:tokio"]